# agent-loop

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  agent-loop.yaml  docker-compose.yml  install.sh  metadata.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: agent_templates.yaml  llm_pool.json  llm_pool.yaml  logging.yaml  permissions.json
docs/: DESIGN-borrow-from-openclaw-claude.md  DESIGN-prompt-skill-scheduling.md  DESIGN-promptskill-manager-learning.md
src/: __init__.py  __main__.py  agent_fork.py  agent_mailbox.py  agent_soul.py  ammo.py  cli.py  core.py  cost_control.py  evolution.py  external_agents.py  interaction.py  learning_system.py  llm.py  llm_pool.py  metrics.py  multimodal.py  permissions.py  persistence.py  pipeline.py  project.py  prompt_system.py  sandbox.py  state_store.py  streaming.py  system_agents.py  task_dag.py  task_manager.py  task_queue.py  tool_registry.py  utils.py  worker.py
src/agent/: __init__.py
src/llm_pool/: __init__.py  auth.py  circuit_breaker.py  config.py  pool.py  protocols.py  tracker.py
src/loop_engine/: __init__.py  deep_reason.py  main_loop.py  metrics.py
src/memory/: __init__.py  anchor.py  consolidation.py  embedding.py  graph_route.py  lesson_learning.py  schema.py  schema.surql  unified_retrieval.py
src/task/: __init__.py
src/tools/: __init__.py  base.py  browser.py  canvas.py  openclaw_bridge.py  ssh.py  web.py
src/web/: __init__.py
state/: cost.json
state/anchors/: agent-loop.md  system.md
state/llm_pool/: usage.jsonl
tests/: test_agent_fork.py  test_agent_soul.py  test_agent_switch.py  test_anchor.py  test_browser_canvas.py  test_cli_integration.py  test_cli_setup.py  test_config_reload.py  test_consolidation.py  test_core.py  test_cost_control.py  test_e2e_full.py  test_e2e_integration.py  test_e2e_smoke.py  test_easyrouter_integration.py  test_embedding.py  test_evolution.py  test_function_calling.py  test_interaction.py  test_lesson_learning.py  test_llm_pool.py  test_llm_pool_v2.py  test_llm_retry.py  test_loop_metrics.py  test_mailbox.py  test_max_iterations.py  test_memory_schema.py  test_metrics.py  test_multimodal.py  test_multimodal_router.py  test_new_features.py  test_permissions.py  test_persistence.py  test_plan_mode.py  test_project_memory.py  test_prompt_template.py  test_real_llm.py  test_replan.py  test_retry.py  test_sandbox.py  (+16 more)
web/: app.js  index.html  style.css
(+32 files in other folders)
