[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop"
version = "0.1.0"
description = "Loop Engine for AI Agent orchestration — shared memory, auto task decomposition, agent lifecycle management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Zhang Yunfei", email = "zhangyunfei@cmcm.com"},
]
keywords = ["ai", "agent", "loop-engine", "orchestration", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.20",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
db = ["surrealdb>=2.0"]
aws = ["boto3>=1.34"]
all = ["fastapi>=0.110", "uvicorn>=0.29", "surrealdb>=2.0", "boto3>=1.34"]
dev = ["agent-loop[web]", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0", "ruff>=0.3"]

[project.scripts]
agent-loop = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
